syntax = "proto3";
package did;

import "gogoproto/gogo.proto";
import "did/did.proto";

option go_package = "github.com/ixofoundation/ixo-blockchain/x/did/types";

// BaseDidDoc defines a base DID document type. It implements the DidDoc interface.
message BaseDidDoc {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.equal)            = false;

  string did                          = 1 [(gogoproto.moretags) = "yaml:\"did\"" ];
  string pub_key                      = 2 [(gogoproto.jsontag) = "pubKey", (gogoproto.moretags) = "yaml:\"pubKey\"" ];
  repeated DidCredential credentials  = 3 [(gogoproto.moretags) = "yaml:\"credentials\""];
}